<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>base_controller</name>
  <version>0.0.0</version>
  <description>The base_controller package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2核心依赖 -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Nav2核心依赖 -->
  <depend>nav2_core</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_dwa_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_bt_navigator</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>